--- a/mercadolivre/mercadolivre/templates/base.html
+++ b/mercadolivre/mercadolivre/templates/base.html
@@ -14,44 +14,20 @@
 </head>
 
 <body>
-    <div id="headbar">
         <div id="usuario"> {{ usuario }} </div>
         <ul>
-            <li><a href="/index/" class="index_page">Home</a></li>
-            <li><a href=" {% static 'logoff' %} ">Logoff</a></li>
-
             <div id="list"></div>
-            <script>
-                var page = document.getElementById('title').innerText
-                if (page === 'Home'){
-                    // document.getElementsByClassName('index_page').id = 'active'
-                    console.log(document.getElementsByClassName('index_page'))
-                }
-                else{
-                    console.log(page + ' else')
-                }
-                var usuario = document.getElementById('usuario').innerText
-                document.getElementById('usuario').innerHTML = ""
-                if (usuario == 'AnonymousUser'){
-                    document.getElementById('list').innerHTML = 
-                    '<li><a href="/user/login/">Login</a></li>'
-                }
-                else{
-                    document.getElementById('list').innerHTML=
-                    '<li><a href="/user/login/">Logado como: {{ usuario }}</a></li>'
-                }
-            </script>
-
-
+            <li><a href="/index/">Home</a></li>
+            <li><a href="/user/login">Login</a></li>
+            <li><a href="/user/signin">Sign in</a></li>
+            <script type="text/javascript" src="{% static 'headbar.js' %}"></script>
         </ul>
-        
-    </div>
 
     <div id="content">
         {% block content %}
 
         {% endblock %}
     </div>
-
+    
 </body>
 </html>
