--- a/mercadolivre/user_app/templates/logoff_page.html
+++ b/mercadolivre/user_app/templates/logoff_page.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block head %}
+<link rel="stylesheet" href="{% static 'user_app/logoff_page.css' %}">
+{% endblock %}
+
 {% block title %}Logoff{% endblock %}
 
 {% block content %}
 <h1>Logoff</h1>
+
+<p>Logoff efetuado com sucesso.</p>
 {% endblock %}
