--- a/mercadolivre/mercadolivre/templates/base.html
+++ b/mercadolivre/mercadolivre/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> {% load static %}
+<html lang="pt-br"> {% load static %}
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'head_bar.css' %}">
