--- a/mercadolivre/user_app/templates/user_page.html
+++ b/mercadolivre/user_app/templates/user_page.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}User Info{% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'user_app/user_page.css' %}">
