--- a/mercadolivre/mercadolivre/static/head_bar.css
+++ b/mercadolivre/mercadolivre/static/head_bar.css
@@ -1,6 +1,7 @@
 #list {
   list-style-type: none;
   margin: 0;
+  margin-top: 1px;
   padding: 0;
   overflow: hidden;
   background-color: #fdee64;
