--- a/mercadolivre/user_app/templates/user_page.html
+++ b/mercadolivre/user_app/templates/user_page.html
@@ -12,10 +12,12 @@
 <h1>User info</h1>
 
 <ul id="userinfolist">
+    <li><strong>Usuário:</strong> {{ usuario }}</li>
     <li><strong>Nome completo:</strong> {{ nome }}</li>
     <li><strong>E-mail:</strong> {{ email }}</li>
     <li><strong>Data de cadastro:</strong> {{ data_cadastro }}</li>
     <li><strong>Último login:</strong> {{ ultimo_login }}</li>
     <li><strong>Senha:</strong> {{ senha }}</li>
 </ul>
+<a href="/user/alterinfo">Alterar informações</a>
 {% endblock %}
