--- a/mercadolivre/user_app/templates/alter_user_page.html
+++ b/mercadolivre/user_app/templates/alter_user_page.html
@@ -19,10 +19,12 @@
             {{x}}
         </li>
         {% endfor %}
+        {% if login_erro %}
+        <div id="senhaincorreta"></div>
+        {% endif %}
         {% csrf_token %}
         <input type="submit" value="enviar">
     </form>
 </ul>
-
 <script type="text/javascript" src="{% static 'user_app/alter_user_page.js' %}"></script>
 {% endblock %}
