--- a/mercadolivre/mercadolivre/templates/base.html
+++ b/mercadolivre/mercadolivre/templates/base.html
@@ -15,6 +15,7 @@
 
 <body>
     <div id="usuario">{{ usuario }}</div>
+    <div id="superuser">{{superuser}}</div>
     <ul id="list">
         <script type="text/javascript" src="{% static 'headbar.js' %}"></script>
     </ul>
