--- a/mercadolivre/user_app/static/user_app/alter_user_page.css
+++ b/mercadolivre/user_app/static/user_app/alter_user_page.css
@@ -1,3 +1,12 @@
 h1{
     text-align: center;
 }
+
+.errorlist{
+    width: 95%;
+    padding: 10px;
+    margin: 10px 0;
+    text-decoration: none;
+    background-color: transparent;
+    color: red;
+}
