--- a/mercadolivre/loja_app/templates/loja/list.html
+++ b/mercadolivre/loja_app/templates/loja/list.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 
-{% block head %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-{% endblock %}
+
 
 {% block content %}
+<div class="container">
 <table class="table">
     <tr>
         <thead class="thead-light">
@@ -23,8 +21,12 @@
                 <td>{{item.descricao}}</td>
                 <td>{{item.valor}}</td>
                 <td>{{item.quantidade}}</td>
+                <td><button type="button" class="btn btn-info"><a href="/loja/{{item.id}}">Info</a></button></td>
+                <td><button type="button" class="btn btn-warning"><a href="/loja/{{item.id}}/update">Update</a></button></td>
+                <td><button type="button" class="btn btn-danger"><a href="/loja/{{item.id}}/delete">Delete</a></button></td>
             </tr>
             {% endfor %}
         </tbody>
 </table>
+</div>
 {% endblock %}
