--- a/mercadolivre/loja_app/templates/loja/create.html
+++ b/mercadolivre/loja_app/templates/loja/create.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 
-{% block head %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-{% endblock %}
+
 
 {% block content %}
+<div class="container">
 <div class="card">
     <div class="card-header">
         <h5 class="card-title">Criar novo Item</h5>
@@ -17,5 +15,6 @@
             <button type="submit" class="btn btn-success">Create</button>
         </form>
     </div>
+</div>
 </div>
 {% endblock %}
