--- a/mercadolivre/mercadolivre/templates/base.html
+++ b/mercadolivre/mercadolivre/templates/base.html
@@ -8,14 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <title id="title">{% block title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {% block head %}
 
     {% endblock %}
 </head>
 
 <body>
-    <div id="usuario">{{ usuario }}</div>
-    <div id="superuser">{{superuser}}</div>
+    <div id="usuario">{{ request.user }}</div>
+    <div id="superuser">{{user.is_superuser}}</div>
     <ul id="list">
         <script type="text/javascript" src="{% static 'headbar.js' %}"></script>
     </ul>
@@ -25,5 +26,6 @@
 
         {% endblock %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
