update_permissoes_para_acesso_views

--- a/mercadolivre/loja_app/templates/loja/detail.html
+++ b/mercadolivre/loja_app/templates/loja/detail.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<div class="container">
 <div class="card">
     <div class="card-header">
         <h5 class="card-title">Detalhe do Item #{{item.id}}</h5>
@@ -19,5 +20,6 @@
     <dd class="col-sm-9">{{ item.quantidade }}</dd>
     </dl>
     </div>
+</div>
 </div>
 {% endblock %}
