--- a/mercadolivre/loja_app/templates/loja/list.html
+++ b/mercadolivre/loja_app/templates/loja/list.html
@@ -26,6 +26,7 @@
                 <td><button type="button" class="btn btn-danger"><a href="/loja/{{item.id}}/delete">Delete</a></button></td>
             </tr>
             {% endfor %}
+            <td><button type="button" class="btn btn-success"><a href="/loja/create">Create</a></button></td>
         </tbody>
 </table>
 </div>
