--- a/mercadolivre/loja_app/templates/loja/delete.html
+++ b/mercadolivre/loja_app/templates/loja/delete.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<div class="container">
 <div class="card">
     <div class="card-header">
         <h5 class="card-title">Deletar Item #{{object.id}}</h5>
@@ -16,5 +17,6 @@
             <button type="submit" class="btn btn-danger">Deletar</button>
         </form>
     </div>
+</div>
 </div>
 {% endblock %}
