--- a/mercadolivre/loja_app/templates/loja/update.html
+++ b/mercadolivre/loja_app/templates/loja/update.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<div class="container">
 <div class="card">
     <div class="card-header">
         <h5 class="card-title">Atualizar Item #{{item.id}}</h5>
@@ -14,5 +15,6 @@
             <button type="submit" class="btn btn-success">Atualizar</button>
         </form>
     </div>
+</div>
 </div>
 {% endblock %}
