--- a/mercadolivre/templates/user/login_page.html
+++ b/mercadolivre/templates/user/login_page.html
@@ -1,24 +1,27 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load widget_tweaks %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Login E-shop{% endblock %}
+
 
 {% block content %}
-<h1 class="text-center mt-5 mb-4">Login</h1>
-
-<section class="container col-4">
+<section class="text-center position-absolute top-50 start-50 translate-middle">
+<main class="form-signin">
     <form method="POST">
+        <img class="mb-4" src="{% static 'img/logo.png' %}" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 fw-normal">Entre com suas informações</h1>
+
         {% for field in form %}
-            <div class="mb-3">
-                <div class="mb-3">
-                    {{field.label_tag}}
-                    {{field | add_class:'form-control shadow-sm p-3 mb-5 bg-body rounded'}}
-                </div>
+            <div class="form-floating">
+                    {{field.label}}
+                    {{field}}
             </div>
         {% endfor %}
+
         {% csrf_token %}
-        <input type="submit" value="Entrar">
+        <button class="w-100 btn btn-lg btn-primary mt-5" type="submit">Entrar</button>
+        <p class="mt-5 mb-3 text-muted">© Eshop</p>
     </form>
+</main>
 </section>
 {% endblock %}
