--- a/mercadolivre/templates/user/login_page.html
+++ b/mercadolivre/templates/user/login_page.html
@@ -5,16 +5,16 @@
 
 
 {% block content %}
-<section class="text-center position-absolute top-50 start-50 translate-middle">
-<main class="form-signin">
+
+<main class="form-signin translate-middle position-absolute top-50 start-50 text-center" style="max-height: 50%;">
     <form method="POST">
         <img class="mb-4" src="{% static 'img/logo.png' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 fw-normal">Entre com suas informações</h1>
-
+        {%include 'partials/_alerts.html'%}
         {% for field in form %}
             <div class="form-floating">
-                    {{field.label}}
                     {{field}}
+                    {{field.label_tag}}
             </div>
         {% endfor %}
 
@@ -23,5 +23,4 @@
         <p class="mt-5 mb-3 text-muted">© Eshop</p>
     </form>
 </main>
-</section>
 {% endblock %}
