--- a/mercadolivre/templates/loja/partials/_index_page.html
+++ b/mercadolivre/templates/loja/partials/_index_page.html
@@ -1,18 +1,23 @@
 {% load static %}
+{% load widget_tweaks %}
 
 {% block content %}
+<div class="container col-6 mt-5">
+
 {% for item in itens %}
 
-<section class="conteiner col-8">
-    <div class="card" style="width: 18rem;">
-        <img src="{% static 'img/no_foto_item.png' %}" class="card-img-top" alt="...">
+    <div class="card col" style="width: 18rem;">
+        <img src="{% static item.imagem %}" class="card-img-top" alt="Imagem do Produto não encontrada">
         <div class="card-body">
             <h5 class="card-title">{{item.nome}}</h5>
             <p class="card-text">R${{item.valor}}</p>
-            <a href="{% url 'detalhe-item' item.id %}" class="btn btn-primary">Ver detalhes</a>
+            <div>
+                <a href="{% url 'detalhe-item' item.id %}" class="btn btn-primary">Ver detalhes</a>
+                Vendido por: {{item.vendedor}}
+            </div>
         </div>
     </div>
-</section>
 
 {% endfor %}
+</div>
 {% endblock %}
