--- a/mercadolivre/templates/loja/partials/_user_dashboard.html
+++ b/mercadolivre/templates/loja/partials/_user_dashboard.html
@@ -1,9 +1,12 @@
+{% load static %}
 {% block content %}
+
 <div class="container">
 <table class="table">
     <tr>
         <thead class="thead-light">
             <tr>
+                <th scope="col">img</th>
                 <th scope="col">nome</th>
                 <th scope="col">desc</th>
                 <th>valor</th>
@@ -18,6 +21,7 @@
             {% for item in itens %}
             {% if item.vendedor.id == user.id %}
             <tr>
+                <td><img src="asd" alt="{% static 'img/no_foto_item.png' %}" width="50" height="50"></td>
                 <td>{{item.nome}}</td>
                 <td>{{item.descricao}}</td>
                 <td>{{item.valor}}</td>
