--- a/mercadolivre/templates/loja/partials/_index_page.html
+++ b/mercadolivre/templates/loja/partials/_index_page.html
@@ -2,22 +2,38 @@
 {% load widget_tweaks %}
 
 {% block content %}
-<div class="container col-6 mt-5">
-
-{% for item in itens %}
-
-    <div class="card col" style="width: 18rem;">
-        <img src="{% static item.imagem %}" class="card-img-top" alt="Imagem do Produto não encontrada">
-        <div class="card-body">
-            <h5 class="card-title">{{item.nome}}</h5>
-            <p class="card-text">R${{item.valor}}</p>
-            <div>
-                <a href="{% url 'detalhe-item' item.id %}" class="btn btn-primary">Ver detalhes</a>
-                Vendido por: {{item.vendedor}}
+<div class="container col-8">
+    <div class="row">
+        {% for item in page_obj %}
+            <div class="card ms-3 mt-3" style="width: 20rem;">
+                <img src="{% static item.imagem %}" class="card-img-top" alt="Imagem do Produto não encontrada">
+                <div class="card-body">
+                    <h5 class="card-title">{{item.nome.title}}</h5>
+                    <p class="card-text">R${{item.valor}}</p>
+                    <div>
+                        <a href="{% url 'detalhe-item' item.id %}" class="btn btn-primary">Ver detalhes</a>
+                        <p>Vendido por: {{item.vendedor}}</p>
+                    </div>
+                </div>
             </div>
-        </div>
+        {% endfor %}
     </div>
 
-{% endfor %}
+<!--PAGINATOR    -->
+<nav aria-label="..." class="mt-3 ms-3">
+    <ul class="pagination pagination-lg">
+        {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a></li>
+        {% endif %}
+        <li class="page-item active" aria-current="page">
+          <span class="page-link">{{ page_obj.number }}</span>
+        </li>
+            {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a></li>
+            {% endif %}
+        <li>{{page_obj}}</li>
+    </ul>
+</nav>
+
 </div>
 {% endblock %}
