--- a/mercadolivre/templates/loja/create.html
+++ b/mercadolivre/templates/loja/create.html
@@ -3,13 +3,13 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container col-6 mt-5">
 <div class="card">
     <div class="card-header">
         <h5 class="card-title">Criar novo Item</h5>
     </div>
     <div class="card-body">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
             <button type="submit" class="btn btn-success">Create</button>
