Inclusão de tests

--- a/mercadolivre/templates/user/login_page.html
+++ b/mercadolivre/templates/user/login_page.html
@@ -19,7 +19,7 @@
         {% endfor %}
 
         {% csrf_token %}
-        <button class="w-100 btn btn-lg btn-primary mt-5" type="submit">Entrar</button>
+        <button class="w-100 btn btn-lg btn-primary mt-5" type="submit" id="submitbtn">Entrar</button>
         <p class="mt-5 mb-3 text-muted">© Eshop</p>
     </form>
 </main>
