--- a/mercadolivre/templates/loja/create.html
+++ b/mercadolivre/templates/loja/create.html
@@ -12,7 +12,7 @@
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
-            <button type="submit" class="btn btn-success">Create</button>
+            <button type="submit" class="btn btn-success">Criar Item</button>
         </form>
     </div>
 </div>
