--- a/mercadolivre/templates/loja/create.html
+++ b/mercadolivre/templates/loja/create.html
@@ -9,6 +9,13 @@
         <h5 class="card-title">Criar novo Item</h5>
     </div>
     <div class="card-body">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{message.tags}}" role="alert">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %}
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
