--- a/mercadolivre/templates/loja/detail.html
+++ b/mercadolivre/templates/loja/detail.html
@@ -3,23 +3,35 @@
 
 
 {% block content %}
-<div class="container">
-<div class="card">
-    <div class="card-header">
-        <h5 class="card-title">Detalhe do Item #{{item.id}}</h5>
+<div class="container col-8 mt-5 mb-5">
+    <div class="card">
+
+        <div class="card-header">
+            <h5 class="card-title">Detalhes do item: {{item.id}}</h5>
+        </div>
+        <div class="card-body">
+            <div class="row ms-3">
+                <div class="col-4">
+                    <img src="/media/{{item.imagem}}" class="figure-img img-fluid rounded">
+                </div>
+                <div class="col-6 mt-5 ms-5">
+                    <h2>{{item.nome}}</h2>
+                    <h4>R$ {{item.valor}}</h4>
+                    <p class="text-muted mt-4">Quantidade disponível: {{item.quantidade}}</p>
+                    <p class="mt-3">Vendido por: {{item.vendedor}}</p>
+                </div>
+            </div>
+            <div class="row ms-3 me-3 mt-5">
+                <div class="card ps-0 pe-0">
+                    <div class="text-center card-header">
+                        <h4 class="card-title">Descrição do Item</h4>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">{{ item.descricao }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-    <dl class="row">
-    <dt class="col-sm-3">Nome do Item</dt>
-    <dd class="col-sm-9">{{ item.nome }}</dd>
-    <dt class="col-sm-3">Descrição do Item</dt>
-    <dd class="col-sm-9">{{ item.descricao }}</dd>
-    <dt class="col-sm-3">Valor do Item</dt>
-    <dd class="col-sm-9">{{ item.valor }}</dd>
-    <dt class="col-sm-3">Quantidade do Item</dt>
-    <dd class="col-sm-9">{{ item.quantidade }}</dd>
-    </dl>
-    </div>
-</div>
 </div>
 {% endblock %}
