--- a/mercadolivre/templates/loja/update.html
+++ b/mercadolivre/templates/loja/update.html
@@ -4,17 +4,24 @@
 
 {% block content %}
 <div class="container">
-<div class="card">
-    <div class="card-header">
-        <h5 class="card-title">Atualizar Item #{{item.id}}</h5>
+    <div class="mt-6">
+        {% include 'partials/_alerts.html' %}
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Atualizar Item #{{item.id}}</h5>
+            </div>
+            <div class="card-body">
+                <form method="post">
+                    {% csrf_token %}
+                    {{form.as_p}}
+                    {% if messages %}
+                        <button type="submit" class="btn btn-success" disabled>Atualizar</button>
+                    {% else %}
+                        <button type="submit" class="btn btn-success">Atualizar</button>
+                    {% endif %}
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-        <form method="post">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit" class="btn btn-success">Atualizar</button>
-        </form>
-    </div>
-</div>
 </div>
 {% endblock %}
