--- a/mercadolivre/templates/loja/update.html
+++ b/mercadolivre/templates/loja/update.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container col-6 mt-5">
     <div class="mt-5">
         {% include 'partials/_alerts.html' %}
         <div class="card">
