--- a/mercadolivre/templates/loja/update.html
+++ b/mercadolivre/templates/loja/update.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
-
+{% block title %}
+{{title}}
+{% endblock %}
 
 {% block content %}
 <div class="container col-6 mt-5">
@@ -13,6 +15,7 @@
             <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
+                    <img src="{{foto}}" alt="">
                     {{form.as_p}}
                     {% if messages %}
                         <button type="submit" class="btn btn-success" disabled>Atualizar</button>
