--- a/mercadolivre/templates/partials/_headbar.html
+++ b/mercadolivre/templates/partials/_headbar.html
@@ -18,7 +18,7 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item active">
-                <a class="nav-link disabled">Pagina atual: <span class="sr-only">{{request.path}</span></a>
+                <a class="nav-link disabled">aiten<span class="sr-only"></span></a>
             </li>
 
         </ul>
@@ -74,7 +74,7 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item active">
-                <a class="nav-link disabled">Pagina atual: <span class="sr-only">{{request.path}</span></a>
+                <a class="nav-link disabled">aiten<span class="sr-only"></span></a>
             </li>
 
         </ul>
