--- a/mercadolivre/templates/user/login_page.html
+++ b/mercadolivre/templates/user/login_page.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<main class="form-signin translate-middle position-absolute top-50 start-50 text-center" style="max-height: 50%;">
+<main class="form-signin container col-3 mt-5 text-center" style="max-height: 50%;">
     <form method="POST">
         <img class="mb-4" src="{% static 'img/logo.png' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 fw-normal">Entre com suas informações</h1>
