--- a/mercadolivre/templates/loja/update.html
+++ b/mercadolivre/templates/loja/update.html
@@ -23,8 +23,8 @@
                     {% if messages %}
                         <button type="submit" class="btn btn-success" disabled>Atualizar</button>
                     {% else %}
-                        <button type="submit" class="btn btn-success">Atualizar</button>
                         <label for="id_imagem">Selecione uma nova imagem, ou deixe em branco para manter a atual.</label>
+                        <button type="submit" class="btn btn-success mt-3">Atualizar</button>
                     {% endif %}
                 </form>
             </div>
