Correção bug de password na alter user page

--- a/mercadolivre/templates/user/alter_user_page.html
+++ b/mercadolivre/templates/user/alter_user_page.html
@@ -13,8 +13,10 @@
         {%include 'partials/_alerts.html'%}
             {% for field in form %}
                 <div class="form-floating">
+                    {% if field.auto_id != 'id_password' %}
                         {{field}}
                         {{field.label_tag}}
+                    {% endif %}
                 </div>
             {% endfor %}
         {% csrf_token %}
