--- a/mercadolivre/templates/user/user_page.html
+++ b/mercadolivre/templates/user/user_page.html
@@ -30,7 +30,7 @@
             {% if user.is_seller %}
                 Vendedor
             {% else %}
-                Não vendedor
+                Comprador
             {% endif %}
         </div>
     </div>
