--- a/mercadolivre/templates/loja/delete.html
+++ b/mercadolivre/templates/loja/delete.html
@@ -3,7 +3,8 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container mt-5">
+    {% include 'partials/_alerts.html' %}
 <div class="card">
     <div class="card-header">
         <h5 class="card-title">Deletar Item #{{object.id}}</h5>
@@ -14,7 +15,11 @@
             <div class="alert alert-warning" role="alert">
                 Tem certeza que deseja deletar o Item: <strong>{{ object }}</strong> ?
             </div>
-            <button type="submit" class="btn btn-danger">Deletar</button>
+            {% if alert %}
+                <button type="submit" class="btn btn-danger" disabled>Deletar</button>
+            {% else %}
+                <button type="submit" class="btn btn-danger">Deletar</button>
+            {% endif %}
         </form>
     </div>
 </div>
