final user&loja_app tests

--- a/mercadolivre/templates/user/user_page.html
+++ b/mercadolivre/templates/user/user_page.html
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <a href="{% url 'alter_user_info_page' user.id %}">Alterar informações</a>
+    <a href="{% url 'alter_user_info_page' %}">Alterar informações</a>
 </section>
 {% endblock %}
