--- a/mercadolivre/templates/partials/_headbar.html
+++ b/mercadolivre/templates/partials/_headbar.html
@@ -45,7 +45,7 @@
                     <a class="dropdown-item" href="{% url 'signup_page' %}">Cadastro</a>
                 </div>
             </li>
-            {% include 'cart/partials/_cart.html' %}
+            {% include 'cart/partials/_cart_button.html' %}
 
         </ul>
         <!-- ** FIM HEADBAR LADO DIREITO ** -->
@@ -108,7 +108,7 @@
                     <a class="dropdown-item" href="{% url 'logoff_page' %}">Logout</a>
                 </div>
             </li>
-            {% include 'cart/partials/_cart.html' %}
+            {% include 'cart/partials/_cart_button.html' %}
 
         </ul>
         <!-- ** FIM HEADBAR LADO DIREITO ** -->
